--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,14 +5,20 @@
     border: 1px solid black;
     border-radius: 10px;
     margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .thread > div:first-of-type{
     margin: 0;
     padding: 0;
-    border-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     width: 100%;
+    height: 50%;
+    flex-shrink: 0;
     
     text-align: justify;
     background-color: red;
+    box-sizing: border-box;
 }
