--- a/src/views/partials/main-header.ejs
+++ b/src/views/partials/main-header.ejs
@@ -1,6 +1,9 @@
-<header>
-    <nav>
-        <a href="/">Main Page</a>
-        <a href="/create">Create Thread</a>
+<header class="site-header">
+  <div class="container">
+    <div class="brand"><a href="/">Simple Forum</a></div>
+    <nav class="main-nav">
+      <a href="/">Home</a>
+      <a href="/create">Create Thread</a>
     </nav>
+  </div>
 </header>
