--- a/src/views/pages/create.ejs
+++ b/src/views/pages/create.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Thread</title>
-    <link rel="stylesheet" href="css/create.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/create.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <%- include('../partials/header.ejs') %>
