--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,3 +1,9 @@
-<footer>
+<footer class="site-footer">
+  <div class="container">
     <p>Author: smierdzielPL</p>
+    <div class="footer-links">
+      <a href="/">Home</a>
+      <a href="/create">Create</a>
+    </div>
+  </div>
 </footer>
