--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="container">
-    <p>Author: smierdzielPL</p>
+    <p>Author: Jakub Witkowski</p>
     <div class="footer-links">
       <a href="/">Home</a>
       <a href="/create">Create</a>
