--- a/src/views/partials/login-header.ejs
+++ b/src/views/partials/login-header.ejs
@@ -1,5 +1,8 @@
 <header class="site-header">
     <div class="container">
         <div class="brand"><a href="/">Simple Forum</a></div>
+        <nav class="main-nav">
+            <a href="/register">Register</a>
+        </nav>
     </div>
 </header>
