--- a/src/views/partials/main-header.ejs
+++ b/src/views/partials/main-header.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="brand"><a href="/">Simple Forum</a></div>
     <nav class="main-nav">
-      <a href="/">Home</a>
+      <a href="/login">Log In</a>
       <a href="/create">Create Thread</a>
     </nav>
   </div>
