--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -15,6 +15,9 @@
     <%- include('../partials/login-header.ejs') %>
         <div class="page-container">
             <form action="/login" method="post">
+
+                <h1>Log In</h1>
+
                 <div class="username-container">
                     <label for="username">Username</label>
                     <input type="text" name="username" id="username">
