--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -12,9 +12,12 @@
 </head>
 
 <body>
-    <%- include('../partials/login-header.ejs') %>
+    <%- include('../partials/register-header.ejs') %>
         <div class="page-container">
             <form action="/register" method="post">
+
+                <h1>Register</h1>
+
                 <div class="username-container">
                     <label for="username">Username</label>
                     <input type="text" name="username" id="username">
